# ai-book-seeker

./: .gitignore  README.md
backend/: .env.example  .flake8  .pylintrc  README.md  __init__.py  alembic.ini  chat_parser.py  explainer.py  logger.py  main.py  memory.py  pyproject.toml  query.py  requirements-dev.txt  requirements.txt  tools.py  vectordb.py
backend/db/: __init__.py  connection.py  models.py
backend/db/schema/: create_books.sql
backend/docs/: book_metadata_extraction.md
backend/docs/features/: book_metadata_extraction.md
backend/prompts/explainer/: explain_recommendation_v2.txt
backend/schema/: create_books.sql
backend/scripts/: __init__.py  create_embeddings.py
backend/src/ai_book_seeker/: __init__.py  main.py
backend/src/ai_book_seeker/api/: routes.py
backend/src/ai_book_seeker/api/routes/: __init__.py  chat.py  health.py  session.py  voice_assistant.py
backend/src/ai_book_seeker/api/schemas/: chat.py  voice_assistant.py
backend/src/ai_book_seeker/core/: config.py  dependencies.py  logging.py
backend/src/ai_book_seeker/db/: connection.py  database.py  models.py
backend/src/ai_book_seeker/features/age_filtering/: __init__.py  logic.py
backend/src/ai_book_seeker/features/budget_optimization/: __init__.py  logic.py
backend/src/ai_book_seeker/features/genre_matching/: __init__.py  constants.py  logic.py
backend/src/ai_book_seeker/features/get_book_recommendation/: handler.py  logic.py  schema.py  tool.py
backend/src/ai_book_seeker/features/search_faq/: faq_service.py  handler.py  logic.py  schema.py  tool.py
backend/src/ai_book_seeker/features/vector_search/: __init__.py  logic.py
backend/src/ai_book_seeker/features/voice-assistant/: elevenlabs_webhook_tool.json
backend/src/ai_book_seeker/metadata_extraction/: __init__.py  api.py  crew.py  main.py  schema.py
backend/src/ai_book_seeker/metadata_extraction/config/: agents.yaml  tasks.yaml
backend/src/ai_book_seeker/metadata_extraction/outputs/: 034-MARTY-MONGOOSE-Free-Childrens-Book-By-Monkey-Pen.txt  Programming-Pearls.txt  the-managers-path-a-guide-for-tech-leaders-camille-fournier-pdf-free-1.txt  the-managers-path-a-guide-for-tech-leaders-camille-fournier-pdf-free.txt
backend/src/ai_book_seeker/metadata_extraction/tools/: __init__.py  pdf_tools.py  validation_tools.py
backend/src/ai_book_seeker/prompts/: __init__.py
backend/src/ai_book_seeker/prompts/explainer/: explain_recommendation_v1.txt
backend/src/ai_book_seeker/prompts/searcher/: search_books_v1.txt
backend/src/ai_book_seeker/prompts/system/: system_prompt_v1.txt
backend/src/ai_book_seeker/scripts/: __init__.py  create_embeddings.py  extract_book_metadata.py
backend/src/ai_book_seeker/services/: chat_parser.py  explainer.py  langchain_orchestrator.py  memory.py  query.py  redis_client.py  tools.py  vectordb.py
backend/src/ai_book_seeker/utils/: __init__.py  chromadb_service.py  helpers.py  langchain_embedder.py  streaming_utils.py
backend/src/ai_book_seeker/workflows/: constants.py  orchestrator.py
backend/src/ai_book_seeker/workflows/agents/: __init__.py  base.py  general.py  general_voice.py  sales.py
backend/src/ai_book_seeker/workflows/nodes/: __init__.py  agent_nodes.py  parameter_nodes.py  tool_nodes.py
backend/src/ai_book_seeker/workflows/registration/: __init__.py  edge_registration.py  node_registration.py
backend/src/ai_book_seeker/workflows/routing/: __init__.py  analysis.py  parameter_extraction.py
backend/src/ai_book_seeker/workflows/schemas/: __init__.py  agents.py  intents.py  routing.py  state.py
backend/src/ai_book_seeker/workflows/tools/: __init__.py  tool_logic.py
backend/src/ai_book_seeker/workflows/utils/: __init__.py  error_handling.py  message_factory.py  node_utils.py  performance.py  response_formatters.py  type_safety.py
backend/tests/: __init__.py  conftest.py  helpers.py  test_prompts.py
backend/tests/integration/: __init__.py  test_metadata_extraction.py
backend/tests/langchain_orchestrator/: test_agent.py
backend/tests/unit/: __init__.py  test_budget_optimization.py  test_explainer.py  test_faq.py  test_fuzzy_genre_matching.py  test_llm_requirements.py  test_metadata_validation.py  test_performance.py  test_query.py  test_query_age_logic.py  test_response_formatters.py  test_type_safety.py  test_workflow_fixes.py
(+31 files in other folders)
